# glam_v6

./: .gitignore  README.md  pyproject.toml  requirements.txt
Ui_design/: Splash_screen.ui
data/: config.json  measurements.csv
deploy/raspberry/: glam.service  install.sh  run_glam.sh
ressources/qlc_files/: default.qxw
src/: app.py  ressources_rc.py
src/config/: config.json  manager.py
src/gui/: Ui_MainWindow.py  __init__.py  cam_page_manager.py  home_page_manager.py  main_window.py  measurement_page_management.py  measurement_page_managment.py  plan_page_manager.py  qlc_page_manager.py  ressources.qrc  ressources_rc.py  setup_page_manager.py  ui_Splash_screen.py
src/hardware/: arduino_controller.py  camera_manager.py
src/img/: .gitkeep
src/services/: camera_service.py  home_service.py  measurement_service.py  plan_service.py  qlc_service.py  setup_service.py
src/utils/: logging_config.py
tests/: test_config.py  test_measurement_service.py  test_plan_service.py  test_splashscreen.py
